add simple governor