@@ -2,7 +2,7 @@ package pl.thatisit.plotter.runner;
 
 import pl.thatisit.plotter.DateUUID;
 import pl.thatisit.plotter.config.ChiaConfig;
-import pl.thatisit.plotter.logprocessor.PlotterProcess;
+import pl.thatisit.plotter.PlotterProcess;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -16,7 +16,7 @@ public class PlotProcessRunner {
         this.config = chiaConfig;
     }
 
-    public PlotterProcess startProcess(String tempDrive, DateUUID jobId) {
+    public PlotterProcess startProcess(String tempDrive, DateUUID jobId, String target) {
         final var baseDir = System.getProperty("user.dir");
 
         try {
@@ -26,10 +26,11 @@ public class PlotProcessRunner {
             Files.createDirectories(Path.of(config.getLogs()));
 
             String cmd = String.format(config.getExecutable() +
-                    " plots create -k32 -n1 -t%s -2%s \"-dJ:\\Chia Plots\" -b3390 -u128", temp, temp);
-            cmd = String.format("start echo 13", cmd, logLocation);
-            final var process = Runtime.getRuntime().exec(cmd);
-            System.out.println(process.toString());
+                    " plots create -k32 -n1 -t%s -2%s \"-d%s\" -b%s -u128", temp, temp, target, config.getMemory());
+            cmd = String.format("start /B %s > %s", cmd, logLocation);
+            new ProcessBuilder()
+                    .command("cmd.exe", "/c", cmd)
+                    .start();
         } catch (IOException e) {
             e.printStackTrace();
         }
